fixed overflow issues on smallest screens

--- a/components/UI/ui.css
+++ b/components/UI/ui.css
@@ -26,6 +26,7 @@
     }
     .team-modal-flex {
         display: block !important;
+        padding-top: 40px !important;
     }
     .team-modal-content {
         margin-bottom: 20px !important;
